examples/test/testpolicy17702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17702
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key14: value44
      key8: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value32
          key10: value3
      podSelector:
        matchLabels:
          key30: value38
